--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ doc/toolboxdoxygen.txt
 doc/toolboxmake.txt
 **.swp
 **/cscope.files
+jira/j.createSingleJiraForEpicNBServerMigrator.py
+jira/j.createTrackingJiraForEpicNBServerMigrator.py
+story_file
