Update scratchpad notes alias for better access

--- a/tmux.conf
+++ b/tmux.conf
@@ -213,7 +213,7 @@ bind -n M-Down select-pane -D
 # Need this to fix Esc-Arrow should not act like M-Arrow
 set -s escape-time 0
 
-bind C-n split-window "vim -n -c 'set autoread' -c 'set autowrite' ~/.scratch"
+bind C-n split-window "vim -n -c 'set autoread' -c 'set autowrite' ~/.scratchpad.txt"
 
 # next window using ctrl tab
 bind-key -n C-Tab next-window
