--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ jira/j.createRenameStoryFromRenameStoryFile.sh
 jira/j.createMigratorStoryFromNBSMStoryFile.sh
 jira/NBSMStoryFile
 jira/NBSVRUPStoryFile
+jira/trkX
